--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,7 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'com.google.guava:guava:11.0.2'
+    compile 'ch.qos.logback:logback-classic:1.2.3'
+    testCompile 'junit:junit:4.12'
 }
